creusot/tests/should_fail/prusti/deref/project_new_ref.stderr
error[creusot]: std::boxed::Box<u32>@'old cannot be moved to 'curr since it isn't copy
                required by creating reference
  --> project_new_ref.rs:15:23
   |
15 | #[ensures(result == **old(x).0.mk_ref())]
   |                       ^^^^^^^^

error: aborting due to previous error

